--ASSIGNMENT 1.08 CHANGELOGS BELOW--

03/01/2025
Functionalities Added
    - Added rule that if items that are artifacts are destroyed and monsters that are unique that are killed  cannot spawn again
Functionalities Changed
    - Rooms array now initialized to hold max rooms count
Bug Fixes
    - Fixed when attacking a monster the player doesn't show anymore (x and y were swapped)
    - Fixed player shows beneath item if they move on top of an item
Bugs Discovered
    - When attacking a monster the player doesn't show anymore
    - Player shows beneath item if they move on top of an item

02/27/2025
Functionalities Added
    - Added an itemMap to store item positions
Functionalities Changed
    - N/A
Bug Fixes
    - Fixed monster moving to illegal areas
Bugs Discovered
    - Monster moving to illegal areas

02/26/2025
Functionalities Added
    - Monster list now updated to show more things
    - Hardness map and distance maps can now be viewed
Functionalities Changed
    - Contains is not generic anymore but instead is split into containsString and containsInt
    - Parsing functions for items and monsters now contains a boolean as a param to determine whether we print
        to terminal or not
Bug Fixes
    - Fixed when teleporting right onto the same cell where the player is the player's symbol is left behind
    - Fixed we are getting seg faults when up and down dungeon levels
    - Fixed monster list bugging out when trying to be shown
Bugs Discovered
    - We are getting seg faults when up and down dungeon levels
    - Monster list bugging out when trying to be shown

02/24/2025
Functionalities Added
    - Added flickering effect for monsters and items that have multiple colors
    - Calculate distances now calculates distances for pass-wall monsters aswell
    - Game ends when a boss monster dies
Functionalities Changed
    - Monster class now contains new attributes and monster are now generated differently as per rules