@@ -7,7 +7,7 @@ SRCS = sources/dungeon_game.cpp \
        sources/priority_queue.cpp \
        sources/monster.cpp \
        sources/pc.cpp \
-	   sources/item.cpp \
+	sources/item.cpp \
        sources/dungeon.cpp \
        sources/character.cpp \
        sources/parse.cpp \
